--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </div> -->
                 </div>
                 <div>
-                    <a href="#" class="cvBtn">Download CV</a>
+                    <a href="kohtet.docx" download="htetwaiyanaung.docx" class="cvBtn">Download CV</a>
                 </div>
             </div>
 
