--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Htet Wai Yan Aung</title>
+    <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
 
     <!-- custom css link -->
     <link rel="stylesheet" href="css/style.css">
